<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yxd_hint">Youxiduo</string>
    <string name="yxd_sdk_name">YouxiduoSDK</string>
    <string name="yxd_login_admin">请输入账号/手机号</string>
    <string name="yxd_login_pass">请输入密码</string>
    <string name="yxd_login">登录</string>
    <string name="yxd_register">注册</string>
    <string name="yxd_re_pass">修改密码</string>
    <string name="yxd_re_phone">修改账号</string>
    <string name="yxd_lost_pass">忘记密码？</string>
    <string name="yxd_hint_phone">请输入手机号</string>
    <string name="yxd_hint_user">请输入用户名</string>
    <string name="yxd_hint_verify_code">请输入验证码</string>
    <string name="yxd_send_code">获取验证码</string>
    <string name="yxd_set_password">请输入密码</string>
    <string name="yxd_resend">重新发送</string>
    <string name="yxd_resend_time">重新发送(%1$d)</string>
    <string name="yxd_next_step">下一步</string>
    <!-- <string name="yxd_voice">接\t021&#8211;31234535\t电话收验证码</string> -->
    <!-- <string name="yxd_voice">接听来自021&#8211;31234535的语音验证</string> -->
    <string name="yxd_voice">接听语音验证：021&#8211;31234535</string>
    <string name="yxd_loding">拼命的加载中</string>
    <string name="yxd_hint_1">已向您的手机发送短信验证码</string>
    <string name="yxd_other_register_way">其他注册方式：</string>
    <string name="yxd_one_key_register">一键注册</string>
    <string name="yxd_imageview">imageview</string>
    <string name="yxd_auto_login">自动登录中</string>
    <string name="yxd_traffic_permit">通行证：</string>
    <string name="yxd_login_success">登录成功</string>
    <string name="yxd_welcome_back">欢迎回来</string>
    <string name="yxd_change_account">切换账号</string>
    <string name="yxd_go_to_game">进入游戏</string>
    <string name="yxd_save_screenshot">截图已保存到手机相册中</string>
    <string name="yxd_phone_verification_code">接受电话获取验证码</string>
    <string name="yxd_account_text">账号：</string>
    <string name="yxd_pass_text">密码：</string>
    <string name="yxd_ensure">确定</string>
    <string name="yxd_pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="yxd_pay_title">多游支付</string>
    <string name="yxd_register_account">注册账号</string>
    <string name="yxd_register_akey">一键注册</string>
    <string name="yxd_acount_login"> 账号登录</string>
    <string name="yxd_please_login"> 请先登录！</string>
    <string name="yxd_recharge_msg"> 交易未完成,是否结束支付?</string>
    <string name="hello_world">""</string>
    
   
    
   
    
   
</resources>