<?xml version="1.0" encoding="utf-8"?>
<!-- 注册验证 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yxd_sl_bg_white_3dp_down"
    android:paddingBottom="15dp" >

    <TextView
        android:id="@+id/change_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/yxd_hint_1"
        android:textColor="@drawable/yxd_gray_656"
        android:textSize="12sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/register_code"
        style="@style/yxd_edit_hint_init"
        android:layout_below="@id/change_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/yxd_sl_bg_gray_3dp_up"
        android:cursorVisible="true"
        android:enabled="false"
        android:hint="@string/yxd_hint_verify_code"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="4"
        android:textCursorDrawable="@null" />

    <ImageView
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yxd_divider_height"
        android:layout_below="@id/register_code"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/yxd_gray_e3e"
        android:contentDescription="@null" />

    <EditText
        android:id="@+id/retrieve_new_password"
        style="@style/yxd_edit_hint_init"
        android:layout_below="@id/divider_1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/yxd_sl_bg_gray_3dp_down"
        android:cursorVisible="true"
        android:hint="@string/yxd_set_password"
        android:imeOptions="actionDone"
        android:maxLength="30"
        android:paddingRight="40dp"
        android:textCursorDrawable="@null" />

    <ImageView
        android:id="@+id/image_password_visibility"
        android:layout_width="@dimen/yxd_edit_height"
        android:layout_height="@dimen/yxd_edit_height"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/retrieve_new_password"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/yxd_hint"
        android:padding="15dp"
        android:src="@drawable/yxd_ic_eye_unselected" />

    <TextView
        android:id="@+id/bt_register_checkCode"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/yxd_edit_height"
        android:layout_alignParentRight="true"
        android:layout_below="@id/change_text"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:text="@string/yxd_send_code"
        android:textColor="@drawable/yxd_blue_22a"
        android:textSize="14sp" />

    <Button
        android:id="@+id/register_next_btn"
        style="@style/yxd_login_edittext"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/retrieve_new_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/yxd_sl_btn_blue_3dp"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/yxd_register"
        android:textColor="@drawable/yxd_white_fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/btn_send_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register_next_btn"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/yxd_phone_verification_code"
        android:textColor="@drawable/yxd_gray_aaa"
        android:textSize="14sp" />

</RelativeLayout>