<?xml version="1.0" encoding="utf-8"?>
<!-- 各种弹出框提示界面 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yxd_sl_bg_white_3dp"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp" >

    <!-- 自动登录中 -->

    <LinearLayout
        android:id="@+id/auto_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ProgressBar
            android:layout_gravity="center_vertical"
	        style="@style/YXdProgressBar1"
	        android:id="@+id/pb"
	        android:layout_width="20dp"
	        android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/yxd_auto_login"
            android:textColor="@drawable/yxd_black_393"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- 游戏多通行证 -->

    <LinearLayout
        android:id="@+id/yxd_traffic_permit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auto_log_in"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yxd_traffic_permit"
            android:textColor="@drawable/yxd_gray_aaa"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/traffic_permit_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="youxiduo12"
            android:textColor="@drawable/yxd_blue_22a"
            android:textSize="14sp" />
    </LinearLayout>
    
    <!-- 切换账号按钮 -->

    <TextView
        android:id="@+id/change_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/yxd_edit_height"
        android:layout_below="@+id/yxd_traffic_permit"
        android:layout_marginTop="10dp"
        android:background="@drawable/yxd_sl_bg_gray_3dp_down"
        android:gravity="center"
        android:text="@string/yxd_change_account"
        android:textColor="@drawable/yxd_black_393"
        android:textSize="12sp" />

    <!-- 登陆成功布局 -->

    <ImageView
        android:id="@+id/yxd_success_img"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_below="@+id/change_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/yxd_imageview"
        android:src="@drawable/yxd_success_img" />

    <TextView
        android:id="@+id/login_success_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_below="@+id/yxd_success_img"
        android:layout_centerHorizontal="true"
        android:text="@string/yxd_login_success"
        android:textColor="@drawable/yxd_black_393"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/yxd_welcome_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_success_text"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/welcome_back_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="youxiduo12"
            android:textColor="@drawable/yxd_blue_22a"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/yxd_welcome_back"
            android:textColor="@drawable/yxd_gray_aaa"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>